--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
    <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
 
-    <link href="css/style_min.css" rel="stylesheet">
+    <!--<link href="css/style_min.css" rel="stylesheet">-->
     <link href="css/print.css" rel="stylesheet" media="print">
     <script async>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -73,6 +73,7 @@
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
+    <link href="css/style_min.css" rel="stylesheet">
   </body>
   <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </html>
