testing removing the load css function

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
+  <!--  <script>
   // include loadCSS here...
   function loadCSS(href){ ... }
   // load a file
   loadCSS( "//fonts.googleapis.com/css?family=Open+Sans:400,700" );
 </script>
-<noscript><link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"></noscript>
+<noscript><link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"></noscript>-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
