--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <footer>
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
-    <link href="css/style_min.css" rel="stylesheet">
+    <!--<link href="css/style_min.css" rel="stylesheet">-->
   </body>
-  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
 </html>
