undid google css fonts

--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@
     </footer>
     <!--<link href="css/style_min.css" rel="stylesheet">-->
   </body>
-  <!--<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">-->
+  <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </html>
