--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       ga('send', 'pageview');
     </script>
     <script src="http://www.google-analytics.com/analytics.js" async></script>
-    <script src="js/perfmatters.js" async></script>
+    <script src="js/perfmattersmin.js" async></script>
   </head>
 
   <body>
